--- a/register.html
+++ b/register.html
@@ -91,7 +91,7 @@
             <div id="faqArea" class="row">
                 <div class="section_title mb-80 regHeading">
                     <h3 style="margin: 1%;"  class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">FAQ</h3>
-                    <h4 style="margin: 1%;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" style="font-size: 23px;">
+                    <h4 style="margin: 1%; font-size: 22px;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >
                         SCROLL DOWN AFTER READING AND CLICK "I AGREE" TO ENABLE THE
                         PURCHASE OPTION</h4>
                     <ul>
@@ -159,12 +159,11 @@
                                 style="font-weight: bold; font-size: 24px; color:  #FF4533;">
                                 HOW WILL I GET IT ?
                             </p>
-                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
+                            <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px; margin-top: 2%;">
                                 It will be shipped to your residence. Free of cost.*
-
                             </p>
                         </li>
-                        <p style="font-size: medium; color: darkgrey; margin: 1%;">*Shipping abroad might incur extra charges for the attendee.</p>
+                        <p style="font-size: 14px; color: darkgrey; margin: 1%;">*Shipping abroad might incur extra charges for the attendee.</p>
                     </ul>
                     <!-- <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         TERMS AND CONDITIONS</h3> -->
