--- a/register.html
+++ b/register.html
@@ -139,7 +139,7 @@
                             </p>
                             <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="font-size:19px">
                                 Pre-recorded talks followed by an interactive session with the speaker.
-                                Fully
+                                Fully live.
 
                             </p>
                         </li>
