--- a/sponsors.html
+++ b/sponsors.html
@@ -86,44 +86,87 @@
 
     <!-- performar_area_start  -->
     <div class="performar_area black_bg">
-        <div class="container mt-5 mb-5" style="height: 450px;">
+        <div class="container mt-5 mb-5">
 
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="section_title text-center mb-80">
-                        <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Our Sponsors</h4>
-                    </div>
+
+
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="brand_wrap">
-                        <div class="brand_active owl-carousel">
-                            <!-- <div class="single_brand text-center">
-                                <img src="img/brand/1.png" alt="">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="section_title mb-80">
+                                <h3 style="color: #FF4533;" class="wow fadeInRight" data-wow-duration="1s"
+                                    data-wow-delay=".3s">Our Sponsors</h3>
+                                <p>
+                                    TEDxTKMCE is a volunteer-run, non-profit organizational event and it's a privilege
+                                    to have these
+                                    wonderful brands be our sponsors and collaborate with them. It's this partnership
+                                    that allows
+                                    every attendee to have an exceptional and memorable TEDx Experience and make
+                                    TEDxTKMCE a grand
+                                    success.
+                                </p>
                             </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-12">
+                            <div class="row mainSpeakersList">
+
+                                <div class="col-lg-3 col-md-6 col-9">
+                                    <div class="single_performer wow fadeInUp" data-wow-duration="1s"
+                                        data-wow-delay=".5s">
+                                        <div data-tilt class="thumb">
+                                            <a href="https://myabcos.com/">
+                                                <img style="object-fit:cover; max-width: 500px; height: 120px; margin-left: auto; margin-right: auto;"
+                                                    src="img/sponsors/abcos logo.png" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="performer_heading">
+                                            <h4>ABCOS</h4>
+                                            <div>
+                                                <a  style="color: aliceblue;"
+                                                    class="fa fa-twitter"></a>
+                                                <a href="https://www.facebook.com/ABCOS-1456369281248085/?ref=bookmarks"
+                                                    style="color: aliceblue;" class="fa fa-facebook"></a>
+                                                <a href="https://www.instagram.com/abcos_marketing/"
+                                                    style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-3 col-md-6 col-9">
+                                    <div class="single_performer wow fadeInUp" data-wow-duration="1s"
+                                        data-wow-delay=".5s">
+                                        <div data-tilt class="thumb">
+                                            <a href="https://www.dsignesglobal.com/#">
+                                                <img style="object-fit:cover; max-width: 500; height: 120px; margin-left: auto; margin-right: auto;"
+                                                    src="img/sponsors/new logo registered.png" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="performer_heading">
+                                            <h4>DSIGNES</h4>
+                                            <div>
+                                                <a style="color: aliceblue;"
+                                                    class="fa fa-twitter"></a>
+                                                <a href="https://www.facebook.com/dsignesglobal/"
+                                                    style="color: aliceblue;" class="fa fa-facebook"></a>
+                                                <a href="https://www.instagram.com/designesfootwear/"
+                                                    style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/3.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/4.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/5.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/1.png" alt="">
-                            </div>
-                            <div class="single_brand text-center">
-                                <img src="img/brand/2.png" alt="">
-                            </div> -->
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
