--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                                             <li><a href="#">About</a></li>
                                             <li><a href="speakers.html">Speakers</a></li>
                                             <li><a href="sponsors.html">Sponsors</a></li>
-                                            <li><a href="index.html#team">Team</a></li>
+                                            <li><a href="team.html">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
                                             <li><a href="index.html#contact">Contact</a></li>
                                         </ul>
