--- a/sponsors.html
+++ b/sponsors.html
@@ -57,7 +57,7 @@
                                             <li><a href="#">About</a></li>
                                             <li><a href="speakers.html">Speakers</a></li>
                                             <li><a href="sponsors.html">Sponsors</a></li>
-                                            <li><a href="index.html#team">Team</a></li>
+                                            <li><a href="team.html">Team</a></li>
                                             <!-- <li><a href="#">Preview</a></li> -->
                                             <li><a href="index.html#contact">Contact</a></li>
                                         </ul>
@@ -125,7 +125,7 @@
                                             </a>
                                         </div>
                                         <div class="performer_heading">
-                                            <h4>ABCOS</h4>
+                                            <h4>Abcos</h4>
                                             <div>
                                                 <a  style="color: aliceblue;"
                                                     class="fa fa-twitter"></a>
