--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                             <div data-tilt class="thumb">
                                 <a href="https://www.dsignesglobal.com/#">
                                     <img style="object-fit:cover; max-width: 500; height: 120px; margin-left: auto; margin-right: auto;"
-                                        src="img/sponsors/new logo registered.png" alt="">
+                                        src="img/sponsors/Capture.PNG" alt="">
                                 </a>
                             </div>
                             <div class="performer_heading">
