--- a/sponsors.html
+++ b/sponsors.html
@@ -160,6 +160,26 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-lg-4 col-md-6 col-9">
+                                    <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                        <div data-tilt class="thumb">
+                                            <a >
+                                                <img style="object-fit:cover; max-width: 500; height: 160px; margin-left: auto; margin-right: auto; background-color: #ffffff;"
+                                                    src="img/sponsors/Catalyst Scholars Logo_V2.png" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="performer_heading">
+                                            <h4 style="color: #ffffff; font-family: tedFont;">Catalyst Scholars</h4>
+                                            <div>
+                                                <a style="color: aliceblue;" class="fa fa-twitter"></a>
+                                                <a href="https://www.facebook.com/catalystscholarskochi" style="color: aliceblue;"
+                                                    class="fa fa-facebook"></a>
+                                                <a href="https://www.instagram.com/catalystscholars/?hl=en" style="color: aliceblue;"
+                                                    class="fa fa-instagram"></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
