--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                         <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                             <div data-tilt class="thumb">
                                 <a href="https://myabcos.com/">
-                                    <img style="object-fit:cover; max-width: 500px; height: 160px; margin-left: auto; margin-right: auto;"
+                                    <img class = "sponsor-img"
                                         src="img/sponsors/abcos logo.png" alt="">
                                 </a>
                             </div>
@@ -550,7 +550,7 @@
                         <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                             <div data-tilt class="thumb">
                                 <a href="https://www.dsignesglobal.com/#">
-                                    <img style="object-fit:cover; max-width: 500; height: 160px; margin-left: auto; margin-right: auto;"
+                                    <img class = "sponsor-img"
                                         src="img/sponsors/Capture.PNG" alt="">
                                 </a>
                             </div>
@@ -571,7 +571,7 @@
                         <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                             <div data-tilt class="thumb">
                                 <a>
-                                    <img style="object-fit:cover; max-width: 500; height: 160px; margin-left: auto; margin-right: auto; background-color: #ffffff;"
+                                    <img class = "sponsor-img" style="background-color: #ffffff;"
                                         src="img/sponsors/Catalyst Scholars Logo_V2.png" alt="">
                                 </a>
                             </div>
